TestSuite/errors/err0444.pas
//!Использование exit, break и continue в блоке finally недопустимо
begin
  try
    
  finally
    exit; 
  end;
end.